Please findbugs; use "efficient" valueOf function